Resolved issue #1182 Volunteers_Image_Align

--- a/src/app/_style/app.card.scss
+++ b/src/app/_style/app.card.scss
@@ -23,7 +23,7 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
-    left: 15%;
+    left: 5%;
     margin-top: 10%;
     top: 12%;
     width: 70%;
